# TrendRadar

./: .gitignore  LICENSE  README.md  SETUP.md  audit_20260620.md  config  one-key-setup.sh  scripts  scripts_sync.sh  sync_files.py  sync_repo.sh
trendradar/: .gitignore  KNOWLEDGE_GRAPH.md  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt
trendradar/cache.bak/: raw_20260530.json  raw_20260531.json  raw_20260602.json  raw_blogs.json
trendradar/config/: __init__.py  api.py  domains.py  fetching.py  heat_tracking.py  keywords.py  proxy.py  scoring.py  sources.json  timeline.yaml  translate.yaml  translation.py
trendradar/data.bak/: curated_morning.json  curated_morning_20260603.json  curated_morning_20260606.json  curated_morning_20260608.json  curated_noon.json  curated_noon_20260605.json  curated_noon_20260606.json  curated_noon_20260608.json  push_log.json
trendradar/migrations/: 001_initial.sql  002_heat_archive.sql  __init__.py  runner.py
trendradar/references/: ARCHITECTURE.md  DELIVERY-WATERMARK.md  INDEX.md  MAINTENANCE.md  PIPELINE.md  REFERENCES-CONSISTENCY-GUIDE.md  REPO-SYNC.md  SETUP.md  TRAPS.md  aggregate-usage.md  cron-audit.md  cron-operations.md  cron-prompt-canonical.md  cron-prompt-generated.md  fix-recipes.md  free-threaded-build.md  health-check-design.md  memory-compression.md  migration-rollback.md  orchestrator-notes.md  performance-pitfalls.md  pipeline.md  pitfalls-utf8-bytes.md  render-deep-analysis.md  render-format.md  render-markdown-failures.md  render-markdown.md  repo-sync.md  script-rendering.md  (+5 more)
(+329 files in other folders)
