[project]
name = "trendradar"
version = "5.5.0"
description = "AI-powered multi-source news aggregation and briefing system"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "pyahocorasick>=2.0",
    "zstandard>=0.23; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
]
free-threaded = [
    "feedparser>=6.0",
    "zstandard>=0.23",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
timeout = 30
addopts = "-v --tb=short --color=yes"
markers = [
    "smoke: 烟雾测试（CI 必须通过）",
    "slow: 慢速测试（可选）",
    "integration: 需要外部依赖（DB / API）",
]
